updated nav bar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
 </head>
 <body>
 
-<nav class="navbar sticky-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Sticky top</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar10">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbar10">
+            <ul class="navbar-nav nav-fill w-100">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.zola.com/wedding/yasminandlynn">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.zola.com/wedding/yasminandlynn/event">Schedule</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.zola.com/wedding/yasminandlynn/registry">Registry</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.zola.com/wedding/yasminandlynn/faq">FAQs</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <div>
